update lai 1 so color va phan import, them lai main va layout cua main

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,5 +71,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:backgroundTint="#55EFC4"
-        android:text="Button" />
+        android:text="Đăng nhập" />
 </LinearLayout>
