--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
     <color name="blue">#74B9FF</color>
     <color name="yellow">#FFEAA7</color>
     <color name="bg_bar">#6BA7BC</color>
+    <color name="button_disabled_color">#B0BEC5</color>
+    <color name="button_enabled_color">#55EFC4</color>
+    <color name="colorAccent">#003F7F</color>
+    <color name="colorGray">#B0BEC5</color>"
 </resources>
