--- a/app/src/main/res/layout/activity_enter_sdt.xml
+++ b/app/src/main/res/layout/activity_enter_sdt.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#357C97"
-    tools:context="com.example.project.EnterSDT">
-
+    tools:context=".EnterSDT">
 
     <ImageButton
         android:id="@+id/imgbtnBackSDT"
@@ -26,38 +25,36 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:layout_marginTop="50dp"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:text="Hãy nhập số điện thoại của bạn" />
 
-    <!-- Dropdown for selecting country code -->
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="383dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
         android:background="@drawable/rounded_button_background"
-        android:padding="10dp"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <Spinner
             android:id="@+id/countryCodeSpinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#FFFFFF"
-            android:spinnerMode="dropdown"
-            android:popupBackground="#FFFFFF"/>
+            android:popupBackground="#FFFFFF"
+            android:spinnerMode="dropdown" />
 
         <EditText
             android:id="@+id/phoneNumberEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Nhập số điện thoại"
-            android:textColor="@color/black"
-            android:inputType="phone"/>
+            android:inputType="phone"
+            android:textColor="@color/black" />
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/textView5"
