--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -8,53 +8,69 @@
     android:layout_height="match_parent"
     tools:context=".BookDetail">
 
-    <ImageView
-        android:id="@+id/bookIcon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="8dp"
-        android:src="@drawable/ic_like_state"
-        android:background="?attr/selectableItemBackground"
-        app:tint="@color/white"
-        android:contentDescription="Favorite"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/IconShare"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
 
-    <ImageView
-        android:id="@+id/IconCLose"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="8dp"
-        android:src="@drawable/icon_close"
-        android:background="?attr/selectableItemBackground"
-        app:tint="@color/white"
-        android:contentDescription="Back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
+        tools:ignore="MissingConstraints">
+        <ImageView
+            android:id="@+id/IconCLose"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="8dp"
+            android:src="@drawable/icon_close"
 
-    <ImageView
-        android:id="@+id/IconShare"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="8dp"
-        android:src="@drawable/ic_hierarchy2"
-        android:background="?attr/selectableItemBackground"
-        app:tint="@color/white"
-        android:contentDescription="Share"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp" />
+            android:background="?attr/selectableItemBackground"
+            app:tint="@color/white"
+            android:contentDescription="Back"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+
+            android:layout_marginTop="16dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="230dp"
+            >
+            <ImageView
+                android:id="@+id/bookIcon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="8dp"
+                android:src="@drawable/ic_like_state"
+                android:background="?attr/selectableItemBackground"
+                app:tint="@color/white"
+                android:contentDescription="Favorite"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/IconShare"
+                android:layout_marginEnd="8dp"
+
+                android:layout_marginTop="16dp" />
+
+            <ImageView
+                android:id="@+id/IconShare"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="8dp"
+                android:src="@drawable/ic_hierarchy2"
+                android:background="?attr/selectableItemBackground"
+                app:tint="@color/white"
+                android:contentDescription="Share"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp" />
+        </LinearLayout>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/bookCoverDetail"
         android:layout_width="150dp"
         android:layout_height="220dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
         android:scaleType="centerCrop"
         android:src="@drawable/nhagiakim"
         app:layout_constraintEnd_toEndOf="parent"
