--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,15 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:layout_marginEnd="16dp">
 
     <ImageView
         android:id="@+id/imgTrend"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop" />
-
-
-
-</FrameLayout>
+        android:layout_width="112dp"
+        android:layout_height="152dp"
+        android:background="@color/white" />
+</LinearLayout>
