--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -116,6 +116,7 @@
                 android:src="@drawable/canhan_f" />
 
             <TextView
+                android:id="@+id/bookAuthorDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Paulo Coelho"
