--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,7 +8,7 @@
 
 
     <LinearLayout
-        android:id="@+id/search_layout"
+        android:id="@+id/btnSearch"
         android:layout_width="290sp"
         android:layout_height="48dp"
         android:orientation="horizontal"
@@ -29,14 +29,16 @@
             android:padding="8dp"/>
 
 
-        <TextView
-            android:id="@+id/tv_search_label"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Tìm kiếm theo sách, tác giả"
+            android:layout_weight="1"
+            android:hint="Tìm kiếm theo sách, tác giả"
             android:textColor="@android:color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:background="@android:color/transparent"
+            android:paddingTop="8dp"/>
     </LinearLayout>
 
 
@@ -47,7 +49,7 @@
         android:layout_marginTop="16dp"
         android:padding="16dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/search_layout"
+        app:layout_constraintTop_toBottomOf="@id/btnSearch"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_category" />
 </androidx.constraintlayout.widget.ConstraintLayout>
