--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -37,14 +37,16 @@
                 android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/iv_search"
+                android:id="@+id/ic_search"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/border_icon_search"
                 android:padding="7dp"
                 android:src="@drawable/ic_search"
-                app:tint="@color/white" />
+                app:tint="@color/white"
+                />
+
         </LinearLayout>
 
 
