--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,51 +4,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark_teal"
     tools:context=".SearchActivity">
+
+
+    <ImageView
+        android:id="@+id/iv_close"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="16dp"
+        android:src="@drawable/icon_close"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/gray" />
 
 
     <LinearLayout
         android:id="@+id/btnSearch"
-        android:layout_width="290sp"
+        android:layout_width="262dp"
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="10dp"
         android:background="@drawable/border_textview_search"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_close"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp">
 
         <ImageView
             android:id="@+id/iv_search"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             app:tint="@color/white"
             android:src="@drawable/ic_search"
-            android:padding="8dp"/>
-
+            android:padding="4dp" />
 
         <EditText
             android:id="@+id/et_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Tìm kiếm theo sách, tác giả"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:hint="Tìm kiếm sách, tác giả"
+            android:layout_marginBottom="2dp"
+            android:textColorHint="@android:color/white"
+            android:textSize="16sp"
             android:background="@android:color/transparent"
-            android:paddingTop="8dp"/>
+            android:paddingTop="8dp" />
     </LinearLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCategories"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:background="@color/white"
         android:padding="16dp"
-        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/btnSearch"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_category" />
