--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,6 +115,16 @@
             android:background="#357C97"
             app:srcCompat="@drawable/phone" />
 
+        <ImageButton
+            android:id="@+id/imgbtnLogin"
+            android:layout_width="43dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="50sp"
+            android:background="@drawable/round_shape"
+            android:backgroundTint="@color/white"
+            app:srcCompat="@drawable/baseline_login_24" />
+
     </LinearLayout>
 
     <TextView
