--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,13 +24,13 @@
 
         <!-- Settings Icon -->
         <ImageButton
-            android:id="@+id/settings_icon"
+            android:id="@+id/logout"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_background_3"
             android:contentDescription="setting"
-            android:src="@drawable/ic_setting"
+            android:src="@drawable/baseline_logout_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +43,7 @@
             android:id="@+id/profile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/me"
             app:civ_border_color="@color/white"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,8 +55,8 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="360dp"
-            android:layout_height="160dp"
+            android:layout_width="362dp"
+            android:layout_height="175dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/rounded_background_1"
             android:orientation="vertical"
@@ -87,6 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="4dp"
+                android:layout_marginBottom="10sp"
                 android:gravity="center"
                 android:text="ngày tham gia"
                 android:textColor="@color/gray"
@@ -211,7 +212,6 @@
                     android:id="@+id/tv_Lib"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="7 cuốn sách"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
@@ -239,7 +239,6 @@
                     android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1h23p"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
