--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -8,236 +8,223 @@
     android:layout_height="match_parent"
     tools:context=".BookDetail">
 
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-
-        tools:ignore="MissingConstraints">
-        <ImageView
-            android:id="@+id/IconCLose"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:padding="8dp"
-            android:src="@drawable/icon_close"
-
-            android:background="?attr/selectableItemBackground"
-            app:tint="@color/white"
-            android:contentDescription="Back"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-
-            android:layout_marginTop="16dp" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="230dp"
-            >
-            <ImageView
-                android:id="@+id/bookIcon"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="8dp"
-                android:src="@drawable/ic_like_state"
-                android:background="?attr/selectableItemBackground"
-                app:tint="@color/white"
-                android:contentDescription="Favorite"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/IconShare"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="16dp" />
-
-            <ImageView
-                android:id="@+id/IconShare"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="8dp"
-                android:src="@drawable/ic_hierarchy2"
-                android:background="?attr/selectableItemBackground"
-                app:tint="@color/white"
-                android:contentDescription="Share"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="16dp" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/bookCoverDetail"
-        android:layout_width="150dp"
-        android:layout_height="220dp"
-        android:layout_marginTop="70dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/nhagiakim"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <LinearLayout
-        android:id="@+id/bookInfoSection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/border_rounded"
-        android:elevation="8dp"
-        android:orientation="vertical"
-        android:padding="16dp"
-
-        app:layout_constraintTop_toBottomOf="@id/bookCoverDetail"
-        tools:layout_editor_absoluteX="0dp">
-
-        <TextView
-            android:id="@+id/bookTitleDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="Nhà Giả Kim"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10sp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="10sp"
-                app:tint="@color/white"
-                android:src="@drawable/canhan_f" />
-
-            <TextView
-                android:id="@+id/bookAuthorDetail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Paulo Coelho"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="10sp"
-                app:tint="@color/white"
-                android:src="@drawable/textalignleft" />
-
-            <TextView
-                android:id="@+id/bookGenreDetail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:text="Văn học, Tiểu thuyết"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="10sp"
-                app:tint="@color/white"
-                android:src="@drawable/star1" />
-
-            <TextView
-            android:id="@+id/bookRatingDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="5.0 (10 Nhận xét)"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="10sp"
-                app:tint="@color/white"
-                android:src="@drawable/archive" />
-
-            <TextView
-                android:id="@+id/bookPriceDetail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:text="Miễn phí - Bạn có thể thêm vào thư viện và đọc trọn vẹn cuốn sách miễn phí"
-                android:textColor="@color/white"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-
-        <Button
-            android:id="@+id/readButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="#55EFC4"
-            android:text="Đọc"
-            android:textColor="@android:color/white" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/addLibrary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="@color/white"
-            android:text="Thêm vào thư viện"
-            android:textColor="@color/dark_teal" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                tools:ignore="MissingConstraints">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bookInfoSection">
+                <ImageView
+                    android:id="@+id/IconCLose"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:padding="8dp"
+                    android:src="@drawable/icon_close"
+                    android:background="?attr/selectableItemBackground"
+                    app:tint="@color/white"
+                    android:contentDescription="Back"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp" />
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mô tả" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="230dp">
+                    <ImageView
+                        android:id="@+id/bookIcon"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_like_state"
+                        android:background="?attr/selectableItemBackground"
+                        app:tint="@color/white"
+                        android:contentDescription="Favorite"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginTop="16dp" />
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabReviews"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nhận xét" />
-    </com.google.android.material.tabs.TabLayout>
+                    <ImageView
+                        android:id="@+id/IconShare"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_hierarchy2"
+                        android:background="?attr/selectableItemBackground"
+                        app:tint="@color/white"
+                        android:contentDescription="Share"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginTop="16dp" />
+                </LinearLayout>
+            </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
-        android:background="@color/detail"
-         />
+            <ImageView
+                android:id="@+id/bookCoverDetail"
+                android:layout_width="150dp"
+                android:layout_height="220dp"
+                android:layout_marginTop="70dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/nhagiakim"
+                android:layout_gravity="center" />
 
+            <LinearLayout
+                android:id="@+id/bookInfoSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
+                android:background="@drawable/border_rounded"
+                android:elevation="8dp"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/bookTitleDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:text="Nhà Giả Kim"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10sp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="10sp"
+                        app:tint="@color/white"
+                        android:src="@drawable/canhan_f" />
+
+                    <TextView
+                        android:id="@+id/bookAuthorDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Paulo Coelho"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="10sp"
+                        app:tint="@color/white"
+                        android:src="@drawable/textalignleft" />
+
+                    <TextView
+                        android:id="@+id/bookGenreDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="10dp"
+                        android:text="Văn học, Tiểu thuyết"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="10sp"
+                        app:tint="@color/white"
+                        android:src="@drawable/star1" />
+
+                    <TextView
+                        android:id="@+id/bookRatingDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="10dp"
+                        android:text="5.0 (10 Nhận xét)"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="10sp"
+                        app:tint="@color/white"
+                        android:src="@drawable/archive" />
+
+                    <TextView
+                        android:id="@+id/bookPriceDetail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="10dp"
+                        android:text="Miễn phí - Bạn có thể thêm vào thư viện và đọc trọn vẹn cuốn sách miễn phí"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="10sp"
+                        app:tint="@color/white"
+                        android:src="@drawable/archive" />
+
+                    <TextView
+                        android:id="@+id/bookDescription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="10dp"
+                        android:text="Tác phẩm tiếp nối 'Sapiens', dự đoán về tương lai của loài người với sự phát triển của trí tuệ nhân tạo và công nghệ sinh học."
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/readButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="#55EFC4"
+                    android:text="Đọc"
+                    android:textColor="@android:color/white" />
+
+                <Button
+                    android:id="@+id/addLibrary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/white"
+                    android:text="Thêm vào thư viện"
+                    android:textColor="@color/dark_teal" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
