--- a/app/src/main/res/layout/activity_van_hoc.xml
+++ b/app/src/main/res/layout/activity_van_hoc.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
-    tools:context=".fragment.VanHoc">
+    android:background="@drawable/linear_background"
+    tools:context=".ui.VanHoc">
 
 
     <ImageButton
@@ -38,7 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="120sp"
-        android:layout_marginBottom="50sp"
         android:background="@drawable/rounded_background_4"
         android:padding="8dp" />
 
