--- a/app/src/main/res/drawable/border_icon_tuduy.xml
+++ b/app/src/main/res/drawable/border_icon_tuduy.xml
@@ -3,14 +3,11 @@
     android:shape="rectangle">
 
 
-    <solid android:color="@color/yellow"/>
-
-
-    <stroke
-        android:width="2dp"
-        android:color="@color/yellow"/>
-
-
-    <corners android:radius="16dp"/>
+    <gradient
+        android:angle="-90"
+        android:endColor="#FFEAA7"
+        android:startColor="#FDCB6E"
+        android:type="linear" />
+    <corners android:radius="20dp" />
 
 </shape>
