--- a/app/src/main/res/drawable/border_icon_vanhoc.xml
+++ b/app/src/main/res/drawable/border_icon_vanhoc.xml
@@ -2,15 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <gradient
+        android:startColor="#0984E3"
+        android:endColor="#74B9FF"
+        android:angle="-90"
+        android:type="linear" />
 
-    <solid android:color="@color/blue"/>
-
-
-    <stroke
-        android:width="2dp"
-        android:color="@color/blue"/>
-
-
-    <corners android:radius="16dp"/>
+    <corners android:radius="20dp"/>
 
 </shape>
