--- a/app/src/main/res/layout/activity_ebook.xml
+++ b/app/src/main/res/layout/activity_ebook.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@drawable/linear_background_2"
     tools:context=".ui.Ebook">
 
     <FrameLayout
@@ -29,10 +29,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5sp"
-                    android:fontFamily="@font/quicksand_bold"
+                    android:fontFamily="@font/bevietnampro_semibold"
                     android:text="Đề xuất dành cho bạn"
-                    android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -44,23 +44,23 @@
                     android:id="@+id/ryclerDx"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginVertical="10dp" />
             </TableRow>
 
             <!-- Top Trending -->
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/textView11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5sp"
-                    android:fontFamily="@font/quicksand_bold"
+                    android:fontFamily="@font/bevietnampro_semibold"
                     android:text="Top Trending"
-                    android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -72,33 +72,34 @@
                     android:id="@+id/ryclerTrend"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginVertical="10dp" />
             </TableRow>
 
             <!-- Văn học -->
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5sp"
-                    android:fontFamily="@font/quicksand_bold"
+                    android:fontFamily="@font/bevietnampro_semibold"
                     android:text="Văn học"
-                    android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/ryclerVh"
                     android:layout_width="340dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="10dp" />
             </TableRow>
         </TableLayout>
     </FrameLayout>
@@ -108,9 +109,9 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="55sp"
+        android:layout_marginStart="55sp"
         android:layout_marginTop="17sp"
-        android:fontFamily="@font/quicksand_bold"
+        android:fontFamily="@font/bevietnampro_bold"
         android:text="Ebook"
         android:textColor="@color/white"
         android:textSize="22sp"
@@ -121,7 +122,7 @@
         android:id="@+id/arrowleft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20sp"
+        android:layout_marginStart="20sp"
         android:layout_marginTop="20sp"
         android:background="@color/teal_700"
         app:srcCompat="@drawable/ic_arrowleft2" />
@@ -129,13 +130,13 @@
 
     <ImageView
         android:id="@+id/iv_search"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_gravity="end"
-        android:layout_marginTop="15sp"
-        android:layout_marginRight="50sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="50dp"
         android:background="@drawable/border_icon_search"
-        android:padding="7dp"
+        android:padding="12dp"
         android:src="@drawable/ic_search"
         app:tint="@color/white" />
 </FrameLayout>
