--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,50 +5,52 @@
     android:id="@+id/history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
-    android:padding="16dp" >
+    android:background="@drawable/linear_background">
 
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="395dp"
+        android:layout_marginVertical="30dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_height="102dp">
 
         <ImageButton
             android:id="@+id/button_back"
-            android:layout_width="62dp"
-            android:layout_height="57dp"
-            android:background="@color/teal_700"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@null"
             app:srcCompat="@drawable/ic_arrowleft" />
 
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="101dp"
             android:layout_height="52dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:background="@drawable/rounded_background_4"
-            android:gravity="center|right"
+            android:gravity="center|end"
             android:textAlignment="center" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="170dp"
             android:layout_height="48dp"
+            android:fontFamily="@font/bevietnampro_bold"
             android:layout_marginTop="55sp"
             android:gravity="center"
             android:text="Lịch sử đọc"
             android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="381dp"
-        android:layout_height="573dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/frameLayout"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/rounded_background_2" />
+        android:layout_marginTop="15dp"
+        android:padding="15dp"
+        android:background="@drawable/rounded_background_4" />
 
 </RelativeLayout>
