--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,10 +1,9 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_teal"
+    android:background="@drawable/linear_background"
     tools:context=".SearchActivity">
 
 
@@ -12,8 +11,8 @@
         android:id="@+id/iv_close"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/icon_close"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,36 +23,35 @@
         android:id="@+id/btnSearch"
         android:layout_width="262dp"
         android:layout_height="48dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:padding="10dp"
-        android:background="@drawable/border_textview_search"
-        app:layout_constraintStart_toEndOf="@id/iv_close"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp">
+        android:background="@drawable/border_textview_search"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_close"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/iv_search"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            app:tint="@color/white"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:src="@drawable/ic_search"
-            android:padding="4dp" />
+            app:tint="@color/white" />
 
         <EditText
             android:id="@+id/et_search"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Tìm kiếm sách, tác giả"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="2dp"
-            android:textColorHint="@android:color/white"
-            android:textSize="16sp"
             android:background="@android:color/transparent"
-            android:paddingTop="8dp" />
+            android:fontFamily="@font/bevietnampro_regular"
+            android:hint="Tìm kiếm sách, tác giả"
+            android:textColorHint="@android:color/white"
+            android:textSize="12sp" />
     </LinearLayout>
 
 
@@ -61,10 +59,10 @@
         android:id="@+id/recyclerViewCategories"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:background="@color/white"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/rounded_background_4"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnSearch"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnSearch"
         tools:listitem="@layout/item_category" />
 </androidx.constraintlayout.widget.ConstraintLayout>
