--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,68 +5,66 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_teal"
+    android:background="@drawable/linear_background"
     tools:ignore="ExtraText">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll"
         android:layout_width="match_parent"
-        app:layout_constraintHeight_default="wrap"
         android:layout_height="0dp"
+        app:layout_constraintHeight_default="wrap"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="20dp">
-            <TextView
-                android:id="@+id/txt_title"
-                android:layout_width="0dp"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_weight="1"
-                android:padding="20dp"
-                android:text="Ergon xin chào!"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal"
+                android:padding="20dp">
 
-            <ImageView
-                android:id="@+id/ic_search"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/border_icon_search"
-                android:padding="7dp"
-                android:src="@drawable/ic_search"
-                app:tint="@color/white"
-                />
+                <TextView
+                    android:id="@+id/txt_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/bevietnampro_bold"
+                    android:text="Ergon xin chào!"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/ic_search"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border_icon_search"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_search"
+                    app:tint="@color/white" />
 
+            </LinearLayout>
 
 
             <LinearLayout
                 android:id="@+id/title_detail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="350dp"
+                android:layout_height="155dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/border_icon_title2"
                 android:orientation="horizontal"
-                android:padding="25dp">
+                android:padding="5dp">
 
                 <ImageView
                     android:id="@+id/featured_image"
                     android:layout_width="90dp"
-                    android:layout_height="110dp"
+                    android:layout_height="135dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/border_icon_title2"
                     android:src="@drawable/stevejob" />
@@ -79,8 +77,9 @@
 
                     <TextView
                         android:id="@+id/featured_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="193dp"
+                        android:layout_height="45dp"
+                        android:fontFamily="@font/bevietnampro_bold"
                         android:text="Tiểu sử Steve Jobs"
                         android:textColor="@color/black"
                         android:textSize="16sp"
@@ -88,16 +87,16 @@
 
                     <TextView
                         android:id="@+id/featured_text1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginRight="25dp"
+                        android:layout_width="193dp"
+                        android:layout_height="45dp"
+                        android:layout_marginEnd="25dp"
+                        android:fontFamily="@font/bevietnampro_regular"
+                        android:lineHeight="15dp"
                         android:text="Đổi mới là yếu tố khác biệt giữa người tiên phong và những kẻ bắt chước"
                         android:textColor="@color/black"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
-
 
 
             <LinearLayout
@@ -105,58 +104,59 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:padding="16dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageButton
                         android:id="@+id/ic_ebook"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/border_icon_ebook"
                         android:padding="16dp"
-                        android:src="@drawable/layer" />
+                        android:src="@drawable/ic_ebook" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/bevietnampro_medium"
                         android:gravity="center"
                         android:text="Ebook"
                         android:textColor="@color/white"
-                        android:textSize="14sp" />
+                        android:textSize="10sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginEnd="50dp"
+                    android:layout_marginHorizontal="70dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
                     <ImageButton
                         android:id="@+id/ic_van_hoc"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/border_icon_vanhoc"
                         android:padding="16dp"
-                        android:src="@drawable/layer" />
+                        android:src="@drawable/ic_vanhoc" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/bevietnampro_medium"
                         android:gravity="center"
                         android:text="Văn học"
                         android:textColor="@color/white"
-                        android:textSize="14sp" />
+                        android:textSize="10sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -167,20 +167,21 @@
 
                     <ImageButton
                         android:id="@+id/ic_ki_nang"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/border_icon_tuduy"
                         android:padding="16dp"
-                        android:src="@drawable/layer" />
+                        android:src="@drawable/ic_tuduy" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/bevietnampro_medium"
                         android:gravity="center"
                         android:text="Tư duy"
                         android:textColor="@color/white"
-                        android:textSize="14sp" />
+                        android:textSize="10sp" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -194,39 +195,82 @@
                     android:id="@+id/txt_trending_book"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="15dp"
+                    android:layout_marginStart="20dp"
+                    android:fontFamily="@font/bevietnampro_semibold"
                     android:text="Trending"
                     android:textColor="@color/white"
-                    android:paddingLeft="20dp"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_trending"
+                    android:layout_width="match_parent"
+                    android:layout_height="145dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginBottom="16dp"
+                    android:scrollbars="horizontal" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_background_ebook"
+                android:orientation="vertical"
+                android:paddingVertical="25dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="27dp"
+                        android:layout_height="27dp"
+                        android:layout_marginStart="25dp"
+                        android:src="@drawable/emojione_open_book" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/bevietnampro_bold"
+                        android:text="EBOOK"
+                        android:textSize="28sp" />
+                </LinearLayout>
+
+                <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="150dp"
-                    android:scrollbars="horizontal"
-                    android:paddingLeft="20dp"
-                    android:paddingBottom="16dp" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="25dp"
+                    android:lineHeight="20dp"
+                    android:fontFamily="@font/bevietnampro_regular"
+                    android:layout_marginTop="10dp"
+                    android:text="Hãy cùng khám phá hàng trăm tựa sách hay và bán chạy nhất mọi thời đại!"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/txt_dexuat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginVertical="15dp"
+                    android:layout_marginStart="20dp"
+                    android:fontFamily="@font/bevietnampro_semibold"
                     android:text="Đề xuất dành cho bạn"
-                    android:textColor="@color/white"
+                    android:textColor="#003041"
                     android:textSize="18sp"
-                    android:paddingLeft="20dp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="0dp" />
+                    android:textStyle="bold" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_dexuat"
-                    android:layout_width="wrap_content"
-                    android:layout_height="150dp"
-
-                    android:paddingLeft="20dp"
-                    android:scrollbars="horizontal"
-                    android:paddingBottom="16dp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginBottom="16dp"
+                    android:scrollbars="horizontal" />
             </LinearLayout>
 
 
