--- a/app/src/main/res/layout/item_dexuat_book.xml
+++ b/app/src/main/res/layout/item_dexuat_book.xml
@@ -2,22 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_marginEnd="16dp">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_button2"
-        android:layout_width="70dp"
-        android:layout_height="100dp"
-        android:background="@color/white" />
-
-    <TextView
-        android:id="@+id/text_view2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:layout_width="115dp"
+        android:layout_height="172dp"
+        android:background="@drawable/rounded_background_2" />
 
 </LinearLayout>
