--- a/app/src/main/res/layout/item_trending_book.xml
+++ b/app/src/main/res/layout/item_trending_book.xml
@@ -2,22 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_marginEnd="16dp">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_button1"
-        android:layout_width="70dp"
-        android:layout_height="100dp"
-        android:background="@color/white" />
-
-    <TextView
-        android:id="@+id/text_view1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@color/teal_700"
+        android:background="@drawable/background_trending_book"
+        android:padding="10dp" />
 
 </LinearLayout>
