--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
 
     <item
@@ -10,6 +11,7 @@
 
     <item
         android:id="@+id/nav_library"
+
         android:icon="@drawable/ic_thuvien"
         android:title="Thư viện" />
 
